--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -1,5 +1,5 @@
 ---
-import '@fontsource-variable/inter';
+import '@fontsource/poppins';
 
 // 'DM Sans'
 // Nunito
@@ -21,12 +21,12 @@ import '@fontsource-variable/inter';
 
 <style is:inline>
   :root {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans: 'Poppins';
+    --aw-font-serif: 'Poppins';
+    --aw-font-heading: 'Poppins';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
+    --aw-color-primary: rgb(122 49 255);
+    --aw-color-secondary: rgb(108 216 129);
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(0 0 0);
@@ -42,12 +42,12 @@ import '@fontsource-variable/inter';
   }
 
   .dark {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans: 'Poppins';
+    --aw-font-serif: 'Poppins';
+    --aw-font-heading: 'Poppins';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
+    --aw-color-primary: rgb(122 49 255);
+    --aw-color-secondary: rgb(108 216 129);
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(247, 248, 248);
