--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,8 @@ import Footer from '~/components/widgets/Footer.astro';
 import FAQs from '~/components/widgets/FAQs.astro';
 import { headerData, footerData } from '~/navigation';
 
-import { Icon } from 'astro-icon/components';
-
 const metadata = {
-  title: 'Incubator Landing Page Demo',
+  title: '1RG Incubator',
 };
 ---
 
