--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,10 @@
 ---
 import Layout from '~/layouts/LandingLayout.astro';
 
+import Hero from '~/components/widgets/Hero.astro';
+import Features2 from '~/components/widgets/Features2.astro';
+import CallToAction from '~/components/widgets/CallToAction.astro';
+import Features from '~/components/widgets/Features.astro';
 import Header from '~/components/widgets/Header.astro';
 import Footer from '~/components/widgets/Footer.astro';
 import FAQs from '~/components/widgets/FAQs.astro';
@@ -14,7 +18,92 @@ const metadata = {
 <Layout metadata={metadata}>
   <Header slot="header" {...headerData} isSticky />
 
+  <Hero
+    tagline="Empowering Our Communities"
+    actions={[
+      {
+        variant: 'primary',
+        target: '_blank',
+        text: 'Learn More',
+        href: '#program',
+      },
+      { text: 'FAQs', href: '#faqs' },
+    ]}
+  >
+    <Fragment slot="title">
+      The 1RG <span class="text-accent dark:text-white highlight">incubator</span> supports audacious projects that reimagine the relationship between people, technology, and the communities they live in.
+    </Fragment>
+
+    <Fragment slot="subtitle">
+      The program focuses on three key areas: mutual aid, political advocacy, and civic engagement initiatives that aim to improve life in Toronto. 
+    </Fragment>
+  </Hero>
+
+  <Features
+    id="program"
+    title="About the program"
+    subtitle="The 1RG incubator is a 12-week mentorship program for individuals who are developing projects at the intersection of technology and community impact. Participants receive workspace access, mentorship, weekly peer accountability meetings, networking opportunities, and community support."
+    columns={3}
+    items={[
+      {
+        title: 'Co-working',
+        description:
+          'Free membership to the 1RG space for the duration of the program.',
+        icon: 'tabler:home-2',
+      },
+      {
+        title: 'Mentorships',
+        description:
+          'Mentorship and advisory, with weekly office hours with a variety of mentors.',
+        icon: 'tabler:calendar-time',
+      },
+      {
+        title: 'Accountability',
+        description:'Weekly facilitated peer-to-peer accountability meetings.',
+        icon: 'tabler:users',
+      },
+      {
+        title: 'Networking',
+        description:'Weekly dinners and networking opportunities.',
+        icon: 'tabler:affiliate',
+      },
+      {
+        title: 'Community',
+        description:
+          'A supportive group of builders and like minded individuals.',
+        icon: 'tabler:friends',
+      },
+      {title: 'Exposure', // Legitimacy?
+        description:
+          'Opportunities to present your work to a wider audience.',
+        icon: 'tabler:users-group',
+      },
+    ]}
+  >
+    <Fragment slot="bg">
+      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
+    </Fragment>
+  </Features>
+
+  <CallToAction
+    actions={[
+      {
+        variant: 'primary',
+        target: '_blank',
+        text: 'Apply',
+        href: 'https://docs.google.com/forms/d/e/1FAIpQLSdiiQxGHhaxd7sBtePEImOZqSR5eDYP50xL0fCRdWvQf6lgog/viewform',
+        icon: 'tabler:hand-click',
+      },
+    ]}
+  >
+    <Fragment slot="title">Join our first batch</Fragment>
+
+    <Fragment slot="subtitle">Starts April 1st, 2025 with applications due January 31st, and requires no equity or financial commitment.</Fragment>
+  </CallToAction>
+
+
   <FAQs
+    id="faq"
     title="Frequently Asked Questions"
     subtitle="Here are some of the most frequently asked questions about the 1RG Incubator."
     classes={{ container: 'max-w-6xl' }}
