thumbnail and title image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,11 @@ const metadata = {
       },
       { text: 'Read the RFP', href: 'https://docs.google.com/document/d/1Wu-dUFfxAa-7hQ7O7TSKhBWYRJxR09Z75zmC0Prcm0s/edit?tab=t.0#heading=h.53f8ced0i4y8' },
     ]}
+    image={{
+      src: '~/assets/images/incubation.jpg',
+      alt: '',
+      loading: 'eager',
+    }}
   >
     <Fragment slot="title">
       Empowering our communities with humane technology
