--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -24,7 +24,14 @@ export interface Props {
   showTitle?: boolean;
 }
 
-const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme = 'light', showTitle = true } = Astro.props;
+const {
+  socialLinks = [],
+  secondaryLinks = [],
+  links = [],
+  footNote = '',
+  theme = 'light',
+  showTitle = true,
+} = Astro.props;
 ---
 
 <footer class:list={[{ dark: theme === 'dark' }, 'relative border-t border-gray-200 dark:border-slate-800 not-prose']}>
@@ -34,9 +41,15 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
   >
     <div class="grid grid-cols-12 gap-4 py-8 gap-y-8 sm:gap-8 md:py-12">
       <div class="col-span-12 lg:col-span-4">
-        {showTitle && <div class="mb-2">
-          <a class="inline-block text-xl font-bold" href={getHomePermalink()}>{SITE?.name}</a>
-        </div>}
+        {
+          showTitle && (
+            <div class="mb-2">
+              <a class="inline-block text-xl font-bold" href={getHomePermalink()}>
+                {SITE?.name}
+              </a>
+            </div>
+          )
+        }
         <div class="flex gap-1 text-sm text-muted">
           {
             secondaryLinks.map(({ text, href }, index) => (
